# BlocksenseOS

./: .actrc  .gitattributes  .gitignore  AGENTS.md  Justfile  MAINTAINERS.md  README.md  SECURITY.md  flake.nix
.devcontainer/: Dockerfile  configuration.nix  devcontainer.json  flake.nix
.github/: WORKFLOW_PATTERN.md  act-env.env  act-events.json  act-secrets.local.env.example
.github/actions/setup-nix/: action.yml
.github/scripts/: get-auth-tokens.sh
.github/workflows/: ci.yml  dependency-updates.yml  performance.yml  release.yml  security-audit.yml  tee-attestation.yml
attestation-agent/: Cargo.toml  deny.toml  deny.toml.backup
attestation-agent/src/: main.rs
clients/rust-client/: Cargo.toml
clients/rust-client/src/: main.rs
derivation-hasher/: Cargo.toml
derivation-hasher/src/: main.rs
docs/: BlocksenseOS-Design.md  BlocksenseOS-DevelopmentPlan.md  ReproOS-Migration.milestones.org  THREAT-MODEL.md
nixos-modules/: base.nix  security.nix  services.nix
performance-monitor/: Cargo.toml  deny.toml
performance-monitor/src/: benchmarks.rs  config.rs  main.rs  metrics.rs  monitor.rs  system.rs
scripts/: efficient-copy.sh  integration-tests.rb  nix.conf  security-audit.rb  setup-nix-substituters.sh  sync-cargo-caches.sh  test.rb
services/cpp-echo/: .gitignore  CMakeLists.txt  main.cpp
services/rust-echo/: Cargo.toml
services/rust-echo/src/: main.rs
