[package]
name = "derivation-hasher"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
blake2 = "0.10"
hex = "0.4"
sparse-merkle-tree = "0.6"
merkletree = "0.23"

[features]
default = []
proofs = []