[package]
name = "performance-monitor"
version = "0.1.0"
edition = "2021"
description = "Performance monitoring and benchmarking suite for BlocksenseOS"
authors = ["BlocksenseOS Team"]
license = "MIT"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Benchmarking and metrics
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
sysinfo = "0.30"
metrics = "0.22"
metrics-exporter-prometheus = { version = "0.13", optional = true }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Networking and HTTP
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Time and utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }

# File system monitoring (conditional)
notify = { version = "6.0", optional = true }

[[bin]]
name = "performance-monitor"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["prometheus", "file-monitoring"]
prometheus = ["metrics-exporter-prometheus"]
file-monitoring = ["notify"]
experimental = []